--- a/Code/SISTORE/src/Presentacion/FIDTabladetalle.form
+++ b/Code/SISTORE/src/Presentacion/FIDTabladetalle.form
@@ -4,7 +4,7 @@
   <Properties>
     <Property name="closable" type="boolean" value="true"/>
     <Property name="frameIcon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-      <Image iconType="0" name="null"/>
+      <Image iconType="3" name="/recursos/icono.png"/>
     </Property>
   </Properties>
   <SyntheticProperties>
